force-app/main/default/objects/Resident__c/Resident__c.object-meta.xml
<CustomObject>
    
    
    
    
    <label>Resident</label>
    
    
    <pluralLabel>Residents</pluralLabel>
    
    
    <sharingModel>ControlledByParent</sharingModel>
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    <nameField>
        
        
        <label>Resident Name</label>
        
        
        <type>Text</type>
        
    
    </nameField>
    

</CustomObject>