force-app/main/default/objects/Resident__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <type>MasterDetail</type>
    <description>Link to the Account (Person Account)</description>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Resident Records</relationshipLabel>
    <relationshipName>Resident_Records</relationshipName>
</CustomField>