force-app/main/default/objects/Resident__c/fields/Advanced_Care_Plan__c.field-meta.xml
<CustomField>
    <fullName>Advanced_Care_Plan__c</fullName>
    <label>Advanced Care Plan in Place</label>
    <type>Checkbox</type>
    <description>Is there an advanced care plan</description>
    <defaultValue>false</defaultValue>
</CustomField>