force-app/main/default/objects/Resident__c/fields/Allergies__c.field-meta.xml
<CustomField>
    <fullName>Allergies__c</fullName>
    <label>Allergies</label>
    <type>LongTextArea</type>
    <inlineHelpText>Known allergies</inlineHelpText>
    <length>2000</length>
</CustomField>