force-app/main/default/objects/Resident__c/fields/Behavioral_Notes__c.field-meta.xml
<CustomField>
    <fullName>Behavioral_Notes__c</fullName>
    <label>Behavioral Notes</label>
    <type>LongTextArea</type>
    <inlineHelpText>Important behavioral patterns and triggers</inlineHelpText>
    <length>10000</length>
</CustomField>