force-app/main/default/objects/Resident__c/fields/Care_Level__c.field-meta.xml
<CustomField>
    <fullName>Care_Level__c</fullName>
    <label>Care Level</label>
    <type>Picklist</type>
    <inlineHelpText>Level of care required</inlineHelpText>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Low-Medium</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Medium-High</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Complex</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>