force-app/main/default/objects/Resident__c/fields/Care_Plan_Summary__c.field-meta.xml
<CustomField>
    <fullName>Care_Plan_Summary__c</fullName>
    <label>Care Plan Summary</label>
    <type>LongTextArea</type>
    <inlineHelpText>Summary of care plan</inlineHelpText>
    <length>32000</length>
</CustomField>