force-app/main/default/objects/Resident__c/fields/Communication_Abilities__c.field-meta.xml
<CustomField>
    <fullName>Communication_Abilities__c</fullName>
    <label>Communication Abilities</label>
    <type>Picklist</type>
    <inlineHelpText>Communication abilities and needs</inlineHelpText>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fully Verbal</fullName>
            </value>
            <value>
                <fullName>Some Verbal Communication</fullName>
            </value>
            <value>
                <fullName>Non-Verbal</fullName>
            </value>
            <value>
                <fullName>Uses Communication Aid</fullName>
            </value>
            <value>
                <fullName>Varies</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>