force-app/main/default/objects/Resident__c/fields/Current_Care_Home__c.field-meta.xml
<CustomField>
    <fullName>Current_Care_Home__c</fullName>
    <label>Current Care Home</label>
    <type>Lookup</type>
    <description>Current care home location</description>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>Residents</relationshipLabel>
    <relationshipName>Residents</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>