force-app/main/default/objects/Resident__c/fields/Current_Medications__c.field-meta.xml
<CustomField>
    <fullName>Current_Medications__c</fullName>
    <label>Current Medications</label>
    <type>LongTextArea</type>
    <inlineHelpText>List of current medications</inlineHelpText>
    <length>10000</length>
</CustomField>