force-app/main/default/objects/Resident__c/fields/Current_Room__c.field-meta.xml
<CustomField>
    <fullName>Current_Room__c</fullName>
    <label>Current Room</label>
    <type>Lookup</type>
    <description>Current room assignment</description>
    <referenceTo>Room__c</referenceTo>
    <relationshipLabel>Residents</relationshipLabel>
    <relationshipName>Residents</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>