force-app/main/default/objects/Resident__c/fields/Dementia_Care_Required__c.field-meta.xml
<CustomField>
    <fullName>Dementia_Care_Required__c</fullName>
    <label>Dementia Care Required</label>
    <type>Checkbox</type>
    <description>Does the resident require dementia care</description>
    <defaultValue>false</defaultValue>
</CustomField>