force-app/main/default/objects/Resident__c/fields/DNR_Status__c.field-meta.xml
<CustomField>
    <fullName>DNR_Status__c</fullName>
    <label>DNR Status</label>
    <type>Picklist</type>
    <inlineHelpText>Do Not Resuscitate status</inlineHelpText>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full Resuscitation</fullName>
            </value>
            <value>
                <fullName>Do Not Resuscitate</fullName>
            </value>
            <value>
                <fullName>DNACPR in Place</fullName>
            </value>
            <value>
                <fullName>Not Discussed</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>