force-app/main/default/objects/Resident__c/fields/GP_Contact__c.field-meta.xml
<CustomField>
    <fullName>GP_Contact__c</fullName>
    <label>GP Contact</label>
    <type>Lookup</type>
    <description>Resident's GP</description>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Residents (GP)</relationshipLabel>
    <relationshipName>Residents_GP</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>