force-app/main/default/objects/Resident__c/fields/Last_Respite_Visit__c.field-meta.xml
<CustomField>
    <fullName>Last_Respite_Visit__c</fullName>
    <label>Last Respite Visit Date</label>
    <type>Date</type>
    <inlineHelpText>Date of last respite visit</inlineHelpText>
</CustomField>