force-app/main/default/objects/Resident__c/fields/Moving_and_Handling_Summary__c.field-meta.xml
<CustomField>
    <fullName>Moving_and_Handling_Summary__c</fullName>
    <label>Moving and Handling Summary</label>
    <type>TextArea</type>
    <inlineHelpText>Moving and handling requirements</inlineHelpText>
</CustomField>