force-app/main/default/objects/Resident__c/fields/Nursing_Care_Required__c.field-meta.xml
<CustomField>
    <fullName>Nursing_Care_Required__c</fullName>
    <label>Nursing Care Required</label>
    <type>Checkbox</type>
    <description>Does the resident require nursing care</description>
    <defaultValue>false</defaultValue>
</CustomField>