force-app/main/default/objects/Resident__c/fields/Personal_Care_Needs__c.field-meta.xml
<CustomField>
    <fullName>Personal_Care_Needs__c</fullName>
    <label>Personal Care Needs</label>
    <type>MultiselectPicklist</type>
    <inlineHelpText>Personal care requirements</inlineHelpText>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bathing Assistance</fullName>
            </value>
            <value>
                <fullName>Dressing Assistance</fullName>
            </value>
            <value>
                <fullName>Toileting Assistance</fullName>
            </value>
            <value>
                <fullName>Continence Care</fullName>
            </value>
            <value>
                <fullName>Medication Management</fullName>
            </value>
            <value>
                <fullName>Feeding Assistance</fullName>
            </value>
            <value>
                <fullName>Mobility Support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>