force-app/main/default/objects/Resident__c/fields/Prefers_Garden_View__c.field-meta.xml
<CustomField>
    <fullName>Prefers_Garden_View__c</fullName>
    <label>Prefers Garden View</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>