force-app/main/default/objects/Resident__c/fields/Requires_Ensuite__c.field-meta.xml
<CustomField>
    <fullName>Requires_Ensuite__c</fullName>
    <label>Requires Ensuite</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>