force-app/main/default/objects/Resident__c/fields/Resident_Since__c.field-meta.xml
<CustomField>
    <fullName>Resident_Since__c</fullName>
    <label>Resident Since</label>
    <type>Date</type>
    <inlineHelpText>Date when person became a resident</inlineHelpText>
</CustomField>