force-app/main/default/objects/Resident__c/fields/Resident_Status__c.field-meta.xml
<CustomField>
    <fullName>Resident_Status__c</fullName>
    <label>Resident Status</label>
    <type>Picklist</type>
    <inlineHelpText>Current status of the resident</inlineHelpText>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prospective</fullName>
            </value>
            <value>
                <fullName>Respite - First Visit</fullName>
            </value>
            <value>
                <fullName>Respite - Returning</fullName>
            </value>
            <value>
                <fullName>Permanent</fullName>
            </value>
            <value>
                <fullName>Discharged - Respite Complete</fullName>
            </value>
            <value>
                <fullName>Discharged - Moved</fullName>
            </value>
            <value>
                <fullName>Discharged - Passed Away</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>