force-app/main/default/objects/Resident__c/fields/Risk_Assessment_Summary__c.field-meta.xml
<CustomField>
    <fullName>Risk_Assessment_Summary__c</fullName>
    <label>Risk Assessment Summary</label>
    <type>LongTextArea</type>
    <inlineHelpText>Summary of risk assessments</inlineHelpText>
    <length>10000</length>
</CustomField>