force-app/main/default/objects/Resident__c/fields/Sensory_Needs__c.field-meta.xml
<CustomField>
    <fullName>Sensory_Needs__c</fullName>
    <label>Sensory Needs</label>
    <type>MultiselectPicklist</type>
    <inlineHelpText>Sensory aids required</inlineHelpText>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hearing Aid</fullName>
            </value>
            <value>
                <fullName>Glasses</fullName>
            </value>
            <value>
                <fullName>Dentures</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>