force-app/main/default/objects/Resident__c/fields/Sleep_Patterns__c.field-meta.xml
<CustomField>
    <fullName>Sleep_Patterns__c</fullName>
    <label>Sleep Patterns</label>
    <type>TextArea</type>
    <inlineHelpText>Information about sleep patterns</inlineHelpText>
</CustomField>