force-app/main/default/objects/Resident__c/fields/Total_Respite_Visits__c.field-meta.xml
<CustomField>
    <fullName>Total_Respite_Visits__c</fullName>
    <label>Total Respite Visits</label>
    <type>Number</type>
    <description>Count of completed respite stays</description>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>